fix: z-index section-subtitle

--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -4,4 +4,5 @@
   line-height: 34px;
   width: 60%;
   text-align: center;
+  z-index: 2;
 }
